# api.gwmc.vip

./: .env  .gitignore  Cargo.toml  DIESEL.md  README.md  env  oauth2.sql  跟我买车-原始需求.odt
migrations/2022-04-28-074135_demo/: down.sql  up.sql
migrations/2022-05-09-094556_oauth/: down.sql  up.sql
migrations/2022-07-07-075749_lawsuit_reptile/: down.sql  up.sql
migrations/2022-07-14-083607_lawsuit_autocar/: down.sql  up.sql
src/: common.rs  db.rs  filters.rs  format_logger.rs  main.rs  oauth.rs  schema.rs  template.rs
src/handlers/: demo_handler.rs  home_handler.rs  mod.rs
src/models/: demo_model.rs  mod.rs  oauth_access_tokens_model.rs  oauth_clients_model.rs  oauth_refresh_tokens_model.rs  oauth_users_model.rs
src/routes/: demo_route.rs  home_route.rs  mod.rs
src/views/: newdemo.html
static/miminium/: README.md  datatables.html  formelement.html  index.html  login.html  modal.html  modal2.html  modal3.html  modal4.html  modalTable.html  myCalendar.html  notifications.html  table.html  切换标签.html  后台列表示例.html  商品修改.html  商品订单.html  收货信息.html  订单后台.html
static/miminium/asset/css/: style.css
static/miminium/asset/css/plugins/: font-awesome.min.css
static/miminium/asset/js/: main.js
static/miminium/asset/uploader/: test.html  thumbnails.html  upload.php  澶氭枃浠朵笂浼_html
static/miminium/asset/uploader/js/: add.more.custom.js  test.custom.js  thumbnails.custom.js
static/miminium/asset/uploader/src/: class.fileuploader.php  jquery.fileuploader.js
static/miminium/asset/uploader/uploads/: startBlog.sh
