[package]
name = "api_gwmc_vip"
version = "0.1.0"
edition = "2021"
authors = ["跟我买车技术支持：临来笑笑生 <luck@elapse.date>"]
readme = "README.md"
keywords = ["warp", "diesel"]
repository = "https://github.com/vagicc/www.xueyigou.cn"

# 跟我买车 - API
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.17.0", features=["full"]}
warp = { version = "0.3.2", features = ["tls","multipart"] }

# diesel是Rust的ORM(对象关系映射器)和查询构建器
# diesel为PostgreSQL、Mysql及SQLite提供了开箱即用的支持
diesel = { version="1.4.8",features=["extras","postgres","r2d2"] }
#diesel = { version="1.4.7",features=["extras","mysql","r2d2","with-deprecated"] }
# 加载环境配置文件.env
dotenv = "0.15.0"

# json
serde_json = "1.0.79"
serde_derive = "1.0.136"
serde = {version = "1.0.136", features = ["derive"] }

# 日志
env_logger = "0.9.0"
log = "0.4.16"
chrono = "0.4.19"

lazy_static = "1.4.0"

# 错误处理
error-chain = "0.12.4"

reqwest = { version="0.11.10",features=["socks","json","blocking","cookies","gzip","brotli","multipart","deflate"]}

select = "0.5.0"
url = "2.2.2"